# DaNiKhan-V-Window

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
cmake/: CMakeRC.cmake  CMakeRegistry.cmake  Config.cmake.in  Uninstall.cmake.in
devtool/: CMakeLists.txt
devtool/src/: devtool.cpp
docs/: 404.md  _config.yml  index.md
docs/building/: index.md
docs/demos/: index.md
docs/documentation/: c-api.md  cpp-api.md  index.md  internal.md  technical.md
docs/installation/: index.md
libcore/: CMakeLists.txt  version.rc.in
libcore/data/: dnn.prototxt
libcore/include/: constants.hpp  dnkvwContext.hpp  dnnTracker.hpp  fpsTimer.hpp  haarTracker.hpp  logger.hpp  resources.hpp  thrdWinCalc.hpp  tracker.hpp  vec3.hpp
libcore/interface/dnkvw/: dnkvw.h  dnkvwInterface.h
libcore/src/: dnkvw.cpp  dnkvwAPI.cpp  dnkvwContext.cpp  dnnTracker.cpp  fpsTimer.cpp  haarTracker.cpp  logger.cpp  thrdWinCalc.cpp  vec3.cpp
